# open-atlas

./: .env.private  .gitignore  .pre-commit-config.yaml  Makefile  README.md  oatlas.py  pyproject.toml
docs/: adding_new_tools.md
oatlas/: __init__.py  banner.txt  config.py  logger.py  main.py  version.py
oatlas/core/: app.py  arg_parser.py  module.py
oatlas/core/lib/: agent.py  functions.py  load_yaml.py
oatlas/methods/: methods.yaml
oatlas/rust/: Cargo.toml
oatlas/rust/src/: lib.rs
oatlas/tools/: README.md  __init__.py
oatlas/tools/AI_image_detector/: AI_image_analysis.py
oatlas/tools/AI_image_detector/utils/: __init__.py  script.py
oatlas/tools/HaveIBeenPwned/: haveibeenpwned.py
oatlas/tools/email_checker/: README.md  validate_emails.py
oatlas/tools/get_pages/: fetch_get_pages.py
oatlas/tools/github_apis/: README.md  github_engine.py
oatlas/tools/github_apis/trufflehog/: __init__.py  core.py  models.py  render.py  search.py  source.py  trufflehog.py
oatlas/tools/hunt_emails/: hunter_email_finder.py
oatlas/tools/hyperlink_extractor/: extract_hyperlinks.py
oatlas/tools/image_analysis/: README.md  deep_learning_scans.py  image_geolocation.py  information_extraction.py
oatlas/tools/image_analysis/utils/: __init__.py  extract_text.py
oatlas/tools/ip_lookups/: README.md  ipinfo_lookup.py
oatlas/tools/nettacker/: __init__.py  nettacker_module_configs.json  nettacker_module_configs_names.json  plan.md
oatlas/tools/nettacker/core/: app.py  fuzzer.py  messages.py  module.py  template.py
oatlas/tools/oathnet/: oathnet.py
oatlas/tools/perplexity/: README.md  perplexity.py
oatlas/tools/reverse_instagram_lookup/: README.md  instagram_lookup_engine.py
oatlas/tools/reverse_reddit_lookup/: README.md
oatlas/tools/username_search/: username_checker.py
oatlas/utils/: common.py  dependency_manager.py  die.py  structure.py  tool_descriptions.py
oatlas/utils/prompts/: GeolocateImageVertexAI.txt  PerplexitySystemInstruction.txt  perpelxity_text_output.txt
oatlas/webserver/: README.md  main.py
oatlas/webserver/static/: custom_css.py
(+28 files in other folders)
